--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,23 @@
   font-size: 0.75rem;
   color: #fff;
 }
+
+.container {
+  background-color: #000;
+  color: #fff;
+}
+
+.buttonClass {
+  background-color: #000;
+  color: #fff;
+}
+
+.select {
+  background-color: #000;
+  color: #fff;
+}
+
+.textarea {
+  background-color: #000;
+  color: #fff;
+}
